--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,4 +23,5 @@
     <string name="tema_act1">светлая тема</string>
     <string name="tema_act2">темная тема</string>
     <string name="back">НАЗАД</string>
+    <string name="c_t">Введите название города</string>
 </resources>
