--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -24,4 +24,5 @@
     <string name="tema_act2">темная тема</string>
     <string name="back">НАЗАД</string>
     <string name="c_t">Введите название города</string>
+    <string name="button_city">Достопримечательности</string>
 </resources>
